# CS5960PHYS

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
Thesis/: main.bbl-SAVE-ERROR  main.tex  refs.bib
Thesis/chapters/: background.tex  conclusion.tex  intro.tex  methods.tex  results.tex  smaller_code_definitions.tex
Thesis/preamble/: macros.tex  packages.tex
archive/: grovers_with_errors.py
notebooks/: panqec_experiments.ipynb  qiskit_grovers_test.ipynb  steane_grovers_ft.ipynb
src/: 5_qubit_qec_grovers.py  BBcode_classes.py  aes.py  gates.py  plot.py  surface_code.py  surface_code_figure.py
src/panqec_simulations/: BBcode_classes.py  analysis.py  decoder_classes.py  errormodel_classes.py  gate_error_simulation.py  memory_simulation.py  plotting.py
src/panqec_simulations/results/: gate_error_lx7_ly7_trials1000000_p0.0005-0.1000-60.npz  gate_error_lx7_ly7_trials100000_p0.0005-0.1000-40.npz
src/smaller_codes/: 5_qubit_qec_grovers.py  7_qubit_grovers_2.py  7_qubit_qec_grovers.py
src/t_gate_implementation/: parallel_factory_model.py  t_gate_cost_model.py
src/t_gate_implementation/results/: parallel_factory_comparison.csv  t_gate_cost_comparison.csv
thesis/: .latexmkrc  main.bbl-SAVE-ERROR  main.tex  refs.bib
thesis/chapters/: background.tex  conclusion.tex  intro.tex  methods.tex  results.tex  smaller_code_definitions.tex  verifying_transversality.tex
thesis/preamble/: macros.tex  packages.tex
