[project]
name = "cs5960phys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bposd>=2.1",
    "jax>=0.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "panqec>=0.1.7",
    "qiskit>=2.2.3",
    "qiskit-aer>=0.17.2",
]
